Fix share buttons overlaping photo description

--- a/app/assets/stylesheets/modules/_fancybox_override.css.scss
+++ b/app/assets/stylesheets/modules/_fancybox_override.css.scss
@@ -1,5 +1,5 @@
 .fancybox-title {
-  padding: 20px 40px;
+  padding: 20px 140px 20px 40px;
 
   h1 {
     font-family: Oswald;
